# ServerKlientAlgebraPolynomov

./: CMakeLists.txt  README.md  klient.c  main.c  polynom.c  polynom.h  prvok.c  prvok.h  server.c  zlomok.c  zlomok.h
